--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/joariasdev/personal-budget#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "nanoid": "^5.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
